# linter

./: .gitignore  BUILD.md  CMakeLists.txt  linter.cbp  linter.depend  linter.layout
header/: coding_norms.h  coding_rules.h  config.h  error.h  file_helper.h  file_list.h  lconf.h  main.h  minunit.h  rule_list.h  rules.h  strings.h  struct.h  variable_rules.h  variables.h
resources/: bad_source.c  default.lconf  parent.lconf  parent2.lconf
sources/header/: coding_rules.h  config.h  file_list.h  lconf.h  rule_list.h  struct.h  variables.h
sources/src/: coding_norms.c  coding_rules.c  config.c  file_list.c  lconf.c  main.c  rule_list.c  rules.c  variable_rules.c  variables.c
src/: coding_norms.c  coding_rules.c  config.c  error.c  file_helper.c  file_list.c  lconf.c  main.c  rule_list.c  rules.c  strings.c  variable_rules.c  variables.c
tests/: tests_rules.c  tests_strings.c
